--- a/app.json
+++ b/app.json
@@ -25,6 +25,12 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "69425444-61f6-41ed-9d16-0d2933b83c4d"
+      }
+    },
+    "owner": "ermay12"
   }
 }
